@@ -1,0 +1,1 @@
+check for presence of 'long long' type in C compiler.
