@@ -1,0 +1,14 @@
+#!/bin/sh
+
+SYSDEP_CLEAN=1
+. ../../sysdep-main
+if [ $? -ne 0 ]
+then
+  exit 111
+fi
+
+f1_tmp="_sd_longlong.h"
+echo "SYSDEPS sd-longlong clean ${f1_tmp}"
+
+f1_out="${SYSDEP_OUTDIR}/${f1_tmp}"
+rm -f ${f1_tmp} ${f1_out}
