@@ -1,0 +1,6 @@
+int main()
+{
+  long long r;
+
+  return 0;
+}
