@@ -1,5 +1,7 @@
 local:
 local_clean:
+	rm -f cc-compile cc-link conf-cc conf-cctype conf-systype \
+	conf-ld libs-math
 
 cc-compile: ../cc-compile conf-cctype conf-cc
 	rm -f cc-compile
