@@ -2,3 +2,4 @@ t_uint.o
 ../uint16.a
 ../uint32.a
 ../uint64.a
+../uint.a
