@@ -1,5 +1,6 @@
 #include "fmt.h"
 
+#if defined(HAVE_LONGLONG)
 unsigned int fmt_ulonglongo(char *str, unsigned long long ul)
 {
   unsigned long long quo;
@@ -18,4 +19,4 @@ unsigned int fmt_ulonglongo(char *str, unsigned long long ul)
   }
   return len;
 }
-
+#endif
