@@ -1,5 +1,6 @@
 #include "scan.h"
 
+#if defined(HAVE_LONGLONG)
 unsigned int scan_ulonglongx(const char *s, unsigned long long *ull)
 {
   register unsigned long long res;
@@ -51,4 +52,4 @@ unsigned int scan_ulonglongx(const char *s, unsigned long long *ull)
   if (ull) *ull = res;
   return pos;
 }
-
+#endif
